results/SpecGenBench/2-shot/log-UniqueNumNested-2023_11_28_03_42_08.txt
public class UniqueNumNested {
    //@ requires 0 <= arr.length && arr.length <= Integer.MAX_VALUE;
    //@ ensures \result < arr.length;
    //@ ensures 0 <= \result && \result < arr.length ==> (\forall int j; 0 <= j && j < \result; arr[j] != arr[\result]);
    //@ ensures \result == -1 ==> (\forall int j; 0 <= j && j < arr.length; arr[j] != arr[\result]);
    public static int uniqueNum(int[] arr) {
        //@ maintaining 0 <= i && i <= arr.length;
        //@ maintaining (\forall int j; 0 <= j && j < i; arr[j] != arr[i]);
        //@ decreases arr.length - i;
        for (int i = 0; i < arr.length; ++i) {
            //@ maintaining i + 1 <= j && j <= arr.length;
            //@ maintaining (\forall int k; i <= k && k < j; arr[k] != arr[j]);
            //@ decreases arr.length - j;
            for (int j = i + 1; j < arr.length; ++j) {
                if(arr[i] == arr[j])
                    break;
            }
            if(j == arr.length)
                return i;
        }
        return -1;
    }
}
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:18: error: cannot find symbol
            if(j == arr.length)
               ^
  symbol:   variable j
  location: class UniqueNumNested
1 error

